--- a/tentang.html
+++ b/tentang.html
@@ -5,153 +5,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>SmartData - Tentang</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-<style>
-    *, *::before, *::after {
-        box-sizing: border-box;
-    }
-    body, h1, p, a, nav {
-        margin: 0;
-        padding: 0;
-        font-family: 'Poppins', sans-serif;
-    }
-    body {
-        background: linear-gradient(135deg, #1e3c72, #2a5298);
-        color: #f1f1f1;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-    }
-    a {
-        color: inherit;
-        text-decoration: none;
-    }
-    nav {
-        background: rgba(0,26,80,0.85);
-        backdrop-filter: saturate(180%) blur(20px);
-        padding: 1rem 2rem;
-        box-shadow: 0 8px 12px rgba(0, 26, 80, 0.9);
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-        display: flex;
-        justify-content: center;
-        font-weight: 700;
-        letter-spacing: 0.04em;
-    }
-    .nav-logo {
-        position: absolute;
-        left: 2rem;
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-        font-size: 1.25rem;
-        font-weight: 900;
-        color: #78bfff;
-        cursor: pointer;
-        user-select: none;
-        text-shadow: 0 2px 6px rgba(0,0,0,0.9);
-    }
-    .nav-logo img {
-        height: 36px;
-        width: 36px;
-        object-fit: contain;
-    }
-    nav ul {
-        display: flex;
-        list-style: none;
-        gap: 2rem;
-    }
-    nav ul li a {
-        position: relative;
-        font-size: 1.1rem;
-        padding: 0.5rem 0;
-        transition: color 0.3s ease;
-    }
-    nav ul li a::after {
-        content: "";
-        position: absolute;
-        width: 0;
-        height: 3px;
-        bottom: 0;
-        left: 0;
-        background: #78bfff;
-        transition: width 0.3s ease;
-        border-radius: 3px;
-    }
-    nav ul li a:hover,
-    nav ul li a.active {
-        color: #78bfff;
-    }
-    nav ul li a:hover::after,
-    nav ul li a.active::after {
-        width: 100%;
-    }
-    main {
-        max-width: 600px;
-        margin: 3rem auto 4rem;
-        background: rgba(255,255,255,0.05);
-        border-radius: 12px;
-        box-shadow: 0 10px 25px rgba(0,0,0,0.35);
-        padding: 3rem 2.5rem;
-        backdrop-filter: saturate(180%) blur(15px);
-        color: #e1e9f1;
-        font-size: 1.15rem;
-        line-height: 1.6;
-        user-select: text;
-        flex-grow: 1;
-    }
-    h1 {
-        color: #ccdefa;
-        font-size: 2.6rem;
-        margin-bottom: 1.5rem;
-        font-weight: 700;
-        letter-spacing: 0.04em;
-        text-shadow: 0 2px 4px rgba(0,0,0,0.5);
-        text-align: center;
-    }
-    p {
-        margin-bottom: 1.4rem;
-    }
-    footer {
-        text-align: center;
-        padding: 1.3rem 1rem;
-        background: rgba(0,26,80,0.85);
-        color: #9bb9ff;
-        font-size: 0.95rem;
-        font-weight: 600;
-        user-select: none;
-        letter-spacing: 0.05em;
-        box-shadow: inset 0 1px 5px rgba(255,255,255,0.1);
-    }
-    /* Responsive */
-    @media (max-width: 480px) {
-        main {
-            margin: 2rem 1.2rem 3.5rem;
-            padding: 2rem 1.5rem;
-            max-width: 100%;
-            border-radius: 12px;
-            font-size: 1rem;
-            line-height: 1.45;
-        }
-        h1 {
-            font-size: 2rem;
-        }
-    }
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<nav>
-    <a href="index.html" class="nav-logo" aria-label="Beranda SmartData">
+<nav class="navbar">
+    <div class="brand-title">
+        <a href="index.html" class="nav-logo" aria-label="Beranda SmartData">
         <img src="logo.png" alt="Logo SmartData" />
         SmartData
     </a>
-    <ul>
-        <li><a href="index.html">Beranda</a></li>
+    </div>
+    <ul class="navbar-links">
+        <li><a href="index.html" class="active" aria-current="page">Beranda</a></li>
         <li><a href="kuis.html">Kuis</a></li>
         <li><a href="simulasi.html">Simulasi</a></li>
         <li><a href="tips.html">Tips Keamanan</a></li>
-        <li><a href="tentang.html" class="active" aria-current="page">Tentang</a></li>
+        <li><a href="tentang.html">Tentang</a></li>
     </ul>
+    <div class="toggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
 </nav>
 <main>
     <h1>🔎 Tentang Aplikasi SmartData</h1>
@@ -162,5 +37,6 @@
 <footer>
     &copy; 2025 SmartData. Semua hak dilindungi.
 </footer>
+<script src="script.js"></script>
 </body>
 </html>
