--- a/tentang.html
+++ b/tentang.html
@@ -16,11 +16,11 @@
     </a>
     </div>
     <ul class="navbar-links">
-        <li><a href="index.html" class="active" aria-current="page">Beranda</a></li>
+        <li><a href="index.html">Beranda</a></li>
         <li><a href="kuis.html">Kuis</a></li>
         <li><a href="simulasi.html">Simulasi</a></li>
         <li><a href="tips.html">Tips Keamanan</a></li>
-        <li><a href="tentang.html">Tentang</a></li>
+        <li><a href="tentang.html"class="active" aria-current="page">Tentang</a></li>
     </ul>
     <div class="toggle">
         <span class="bar"></span>
