--- a/kuis.html
+++ b/kuis.html
@@ -16,8 +16,8 @@
     </a>
     </div>
     <ul class="navbar-links">
-        <li><a href="index.html" class="active" aria-current="page">Beranda</a></li>
-        <li><a href="kuis.html">Kuis</a></li>
+        <li><a href="index.html">Beranda</a></li>
+        <li><a href="kuis.html"class="active" aria-current="page">Kuis</a></li>
         <li><a href="simulasi.html">Simulasi</a></li>
         <li><a href="tips.html">Tips Keamanan</a></li>
         <li><a href="tentang.html">Tentang</a></li>
@@ -33,6 +33,13 @@
     <form id="quizForm" novalidate>
         <div class="question">
             <h3>1. Apa yang paling mungkin terjadi jika data NIK kamu bocor?</h3>
+            <span class="tooltip" data-tooltip="Penyebab NIK bisa bocor karena beberapa faktor:
+            Penyebabnya berupa: 
+            1. Mengunggah KTP di media sosial.
+            2. Mengisi formulir online dari sumber tidak resmi.
+            3. Tidak menyensor data pribadi saat berbagi dokumen.
+            4. Menggunakan Wi-Fi publik tanpa pengaman.
+            5. Ceroboh saat membuang atau menyimpan dokumen fisik seperti fotokopi KTP.">?</span>
             <label><input type="radio" name="q1" value="B" required> Kamu bisa ditagih pinjaman online yang tidak kamu ajukan.</label>
             <label><input type="radio" name="q1" value="A"> Email kamu jadi lambat.</label>
             <label><input type="radio" name="q1" value="C"> Koneksi internetmu melambat.</label>
@@ -47,6 +54,12 @@
         </div>
         <div class="question">
             <h3>3. Jika emailmu bocor, risiko utama yang bisa kamu alami adalah...?</h3>
+            <span class="tooltip" data-tooltip="Email  bocor terjadi karena beberapa faktor:
+            1. Menggunakan password yang lemah seperti '123456', 'namakamu123'.
+            2. Mengakses email pribadi di perangkat umum seperti di warnet dan komputer pinjaman tanpa logout.
+            3. Mengklik link palsu dari email/WA/SMS yang mirip seperti notifikasi resmi.
+            4. Tidak membaca izin saat instal aplikasi (permissions seperti 'akses email', 'baca kontak').
+            5. Tidak Mengaktifkan Verifikasi Dua Langkah (2FA)">?</span>
             <label><input type="radio" name="q3" value="B" required> Mendapat banyak spam dan email penipuan.</label>
             <label><input type="radio" name="q3" value="A"> Email kamu jadi tidak bisa dibuka lagi.</label>
             <label><input type="radio" name="q3" value="C"> Kuota internet cepat habis.</label>
