--- a/tips.html
+++ b/tips.html
@@ -16,10 +16,10 @@
     </a>
     </div>
     <ul class="navbar-links">
-        <li><a href="index.html" class="active" aria-current="page">Beranda</a></li>
+        <li><a href="index.html">Beranda</a></li>
         <li><a href="kuis.html">Kuis</a></li>
         <li><a href="simulasi.html">Simulasi</a></li>
-        <li><a href="tips.html">Tips Keamanan</a></li>
+        <li><a href="tips.html" class="active" aria-current="page">Tips Keamanan</a></li>
         <li><a href="tentang.html">Tentang</a></li>
     </ul>
     <div class="toggle">
